@@ -1,3 +1,7 @@
+2009-11-07  Andreas K. Foerster  <info@akfoerster.de>
+
+	* example.c: updated and more comments
+
 2009-10-31  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c (avt_pager): new function
